Change Stream to Streamable.